After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 722454 - [3.11] Up button doesn't receive clicks if no pointer move happens in-between
[3.11] Up button doesn't receive clicks if no pointer move happens in-between
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2014-01-17 20:36 UTC by Baptiste Mille-Mathias
Modified: 2014-01-31 13:16 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Baptiste Mille-Mathias 2014-01-17 20:36:32 UTC
When clicking the arrow button to going up in the source hierarchy, the subsequent clicks don't produce any action on the button.
You need to move the cursor out of the button before clicking again on it to have the click received.
Comment 1 Bastien Nocera 2014-01-31 13:16:12 UTC
commit 549157c9df9efda0d4bb3519e7aa50a6d4c85511
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Jan 31 14:14:10 2014 +0100

    main: Fix back button not working after click
    
    We were hiding then showing again the back button when
    clicking on "back" button, making it unclickable until we
    left and re-entered the button.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=722454