main: Fix back button not working after click

We were hiding then showing again the back button when
clicking on "back" button, making it unclickable until we
left and re-entered the button.

https://bugzilla.gnome.org/show_bug.cgi?id=722454